# freenect-rs

./: Cargo.toml
examples/: app.rs  main.rs  paint.rs
src/: attributes.rs  buffer.rs  context.rs  device.rs  ffi.rs  info.rs  lib.rs  traits.rs  utils.rs
tests/: test.rs
