[package]
name = "libfreenect"
version = "0.1.0"
authors = ["Sebastian Garrido <sebasgarcep@gmail.com>"]

[dependencies]
libc = "0.1.10"
piston_window = "0.23.0"
image = "0.3.14"
gfx_device_gl = "0.5.0"

[lib]
name = "freenect"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "examples/main.rs"
